// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`development configureReactClient 1`] = `
Object {
  "devtool": "eval",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Array [
        Object {
          "exclude": /node_modules\\|bower_components/,
          "test": /public\\\\/\\.\\*\\\\\\.\\(\\?!\\(jpe\\?g\\|png\\|webm\\)\\$\\)\\(\\[\\^\\.\\]\\+\\$\\)\\$/,
          "use": Array [
            Object {
              "loader": "file",
              "options": Object {
                "name": "[1]/[md4:hash:base62:12].[ext]",
                "regExp": /public\\\\/\\(\\.\\*\\)\\\\\\.\\(\\[\\^\\.\\]\\+\\)\\$/,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.\\(jpe\\?g\\|png\\)\\$/i,
          "use": Array [
            "cache",
            Object {
              "loader": "responsive-loader",
              "options": Object {
                "adapter": [Function],
                "name": "[folder]/[name]/[width]x[height]/[md4:hash:12].[ext]",
              },
            },
          ],
        },
      ],
      Object {
        "exclude": /node_modules\\|bower_components/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": false,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "runtime": false,
                  },
                },
              ],
            ],
          },
        },
      },
      Object {
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime\\|core-js\\|warning/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": false,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "runtime": false,
                  },
                },
              ],
            ],
            "sourceMaps": false,
            "sourceType": "unambiguous",
          },
        },
      },
    ],
  },
  "name": "client",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "path": "empty",
    "process": true,
    "querystring": true,
    "tls": "empty",
    "url": "empty",
    "vm": "empty",
  },
  "optimization": Object {
    "chunkIds": "named",
    "moduleIds": "hashed",
    "removeAvailableModules": false,
    "removeEmptyChunks": false,
  },
  "output": Object {
    "chunkFilename": "js/[name].js",
    "filename": "js/[name].js",
    "globalObject": "this",
    "pathinfo": false,
    "publicPath": "/public/",
  },
  "performance": Object {
    "hints": false,
  },
  "plugins": Array [
    LoaderOptionsPlugin {
      "options": Object {
        "debug": true,
        "minimize": false,
        "test": Object {
          "test": [Function],
        },
      },
    },
    LoaderOptionsPlugin {
      "options": Object {
        "debug": true,
        "minimize": false,
        "test": Object {
          "test": [Function],
        },
      },
    },
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "true",
        "__DEV__": "true",
        "__SERVER__": "false",
        "__STAGE__": undefined,
      },
    },
  ],
  "resolve": Object {
    "descriptionFiles": Array [
      "package.json",
    ],
    "extensions": Array [
      ".mjs",
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
    "mainFields": Array [
      "browser",
      "module",
      "jsnext",
      "esnext",
      "jsnext:main",
      "main",
    ],
    "modules": Array [
      "node_modules",
    ],
    "symlinks": false,
  },
  "resolveLoader": Object {
    "moduleExtensions": Array [
      "-loader",
    ],
    "modules": Array [
      "node_modules",
    ],
  },
  "target": "web",
}
`;

exports[`development configureReactServer 1`] = `
Object {
  "alias": Object {
    "node-fetch$": "node-fetch/lib/index.js",
  },
  "devtool": "eval",
  "externals": Array [
    "js-beautify",
    "encoding",
  ],
  "mode": "development",
  "module": Object {
    "rules": Array [
      Array [
        Object {
          "exclude": /node_modules\\|bower_components/,
          "test": /public\\\\/\\.\\*\\\\\\.\\(\\?!\\(jpe\\?g\\|png\\|webm\\)\\$\\)\\(\\[\\^\\.\\]\\+\\$\\)\\$/,
          "use": Array [
            Object {
              "loader": "file",
              "options": Object {
                "name": "[1]/[md4:hash:base62:12].[ext]",
                "regExp": /public\\\\/\\(\\.\\*\\)\\\\\\.\\(\\[\\^\\.\\]\\+\\)\\$/,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.\\(jpe\\?g\\|png\\)\\$/i,
          "use": Array [
            "cache",
            Object {
              "loader": "responsive-loader",
              "options": Object {
                "adapter": [Function],
                "name": "[folder]/[name]/[width]x[height]/[md4:hash:12].[ext]",
              },
            },
          ],
        },
      ],
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.mjs\\$/,
        "type": "javascript/auto",
      },
      Object {
        "exclude": /node_modules\\|bower_components/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": false,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": false,
                  },
                },
              ],
            ],
          },
        },
      },
      Object {
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime\\|core-js\\|warning/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": false,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": false,
                  },
                },
              ],
            ],
            "sourceMaps": false,
            "sourceType": "unambiguous",
          },
        },
      },
      Object {
        "loaders": Array [
          "raw",
        ],
        "test": /\\\\\\.html\\|\\\\\\.txt\\|\\\\\\.tpl/,
      },
    ],
  },
  "name": "server",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "path": "empty",
    "process": true,
    "querystring": "empty",
    "tls": "empty",
    "url": "empty",
    "vm": "empty",
  },
  "optimization": Object {
    "chunkIds": "named",
    "moduleIds": "hashed",
    "removeAvailableModules": false,
    "removeEmptyChunks": false,
  },
  "output": Object {
    "filename": "render.js",
    "libraryTarget": "commonjs2",
    "pathinfo": false,
    "publicPath": "/public/",
  },
  "performance": Object {
    "hints": false,
  },
  "plugins": Array [
    LoaderOptionsPlugin {
      "options": Object {
        "debug": true,
        "minimize": false,
        "test": Object {
          "test": [Function],
        },
      },
    },
    IgnoreEmitPlugin {
      "DEBUG": false,
      "ignorePatterns": Array [
        /\\\\\\.\\(\\?!txt\\|\\[tj\\]sx\\?\\|json\\)\\\\w\\+\\$/,
      ],
      "options": Object {},
    },
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "false",
        "__DEV__": "true",
        "__SERVER__": "true",
        "__STAGE__": undefined,
      },
    },
  ],
  "resolve": Object {
    "descriptionFiles": Array [
      "package.json",
    ],
    "extensions": Array [
      ".mjs",
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
    "mainFields": Array [
      "module",
      "jsnext",
      "esnext",
      "jsnext:main",
      "main",
    ],
    "modules": Array [
      "node_modules",
    ],
    "symlinks": false,
  },
  "resolveLoader": Object {
    "moduleExtensions": Array [
      "-loader",
    ],
    "modules": Array [
      "node_modules",
    ],
  },
  "target": "node",
}
`;

exports[`development configureStaticReactServer 1`] = `
Object {
  "alias": Object {
    "node-fetch$": "node-fetch/lib/index.js",
  },
  "devtool": "eval",
  "externals": Array [
    "js-beautify",
    "encoding",
  ],
  "mode": "development",
  "module": Object {
    "rules": Array [
      Array [
        Object {
          "exclude": /node_modules\\|bower_components/,
          "test": /public\\\\/\\.\\*\\\\\\.\\(\\?!\\(jpe\\?g\\|png\\|webm\\)\\$\\)\\(\\[\\^\\.\\]\\+\\$\\)\\$/,
          "use": Array [
            Object {
              "loader": "file",
              "options": Object {
                "name": "[1]/[md4:hash:base62:12].[ext]",
                "regExp": /public\\\\/\\(\\.\\*\\)\\\\\\.\\(\\[\\^\\.\\]\\+\\)\\$/,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.\\(jpe\\?g\\|png\\)\\$/i,
          "use": Array [
            "cache",
            Object {
              "loader": "responsive-loader",
              "options": Object {
                "adapter": [Function],
                "name": "[folder]/[name]/[width]x[height]/[md4:hash:12].[ext]",
              },
            },
          ],
        },
      ],
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.mjs\\$/,
        "type": "javascript/auto",
      },
      Object {
        "exclude": /node_modules\\|bower_components/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": false,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": false,
                  },
                },
              ],
            ],
          },
        },
      },
      Object {
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime\\|core-js\\|warning/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": false,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": false,
                  },
                },
              ],
            ],
            "sourceMaps": false,
            "sourceType": "unambiguous",
          },
        },
      },
      Object {
        "loaders": Array [
          "raw",
        ],
        "test": /\\\\\\.html\\|\\\\\\.txt\\|\\\\\\.tpl/,
      },
      Object {
        "test": /robots\\(\\\\\\.disallow\\)\\?\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "file",
            "options": Object {
              "name": "robots.txt",
            },
          },
        ],
      },
      Object {
        "loaders": Array [
          "raw",
        ],
        "test": /\\\\\\.html/,
      },
    ],
  },
  "name": "server",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "path": "empty",
    "process": true,
    "querystring": "empty",
    "tls": "empty",
    "url": "empty",
    "vm": "empty",
  },
  "optimization": Object {
    "chunkIds": "named",
    "moduleIds": "hashed",
    "removeAvailableModules": false,
    "removeEmptyChunks": false,
  },
  "output": Object {
    "filename": "render.js",
    "libraryTarget": "commonjs2",
    "pathinfo": false,
    "publicPath": "/public/",
  },
  "performance": Object {
    "hints": false,
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "false",
        "__DEV__": "true",
        "__SERVER__": "true",
        "__STAGE__": undefined,
        "process": Object {
          "cwd": [Function],
          "env": Object {
            "NODE_ENV": "\\"development\\"",
            "STAGE": undefined,
          },
        },
      },
    },
    LoaderOptionsPlugin {
      "options": Object {
        "debug": true,
        "minimize": false,
        "test": Object {
          "test": [Function],
        },
      },
    },
    IgnoreEmitPlugin {
      "DEBUG": false,
      "ignorePatterns": Array [
        /\\\\\\.\\(\\?!txt\\|\\[tj\\]sx\\?\\|json\\)\\\\w\\+\\$/,
      ],
      "options": Object {},
    },
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "false",
        "__DEV__": "true",
        "__SERVER__": "true",
        "__STAGE__": undefined,
      },
    },
  ],
  "resolve": Object {
    "descriptionFiles": Array [
      "package.json",
    ],
    "extensions": Array [
      ".mjs",
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
    "mainFields": Array [
      "module",
      "jsnext",
      "esnext",
      "jsnext:main",
      "main",
    ],
    "modules": Array [
      "node_modules",
    ],
    "symlinks": false,
  },
  "resolveLoader": Object {
    "moduleExtensions": Array [
      "-loader",
    ],
    "modules": Array [
      "node_modules",
    ],
  },
  "target": "node",
}
`;

exports[`production configureReactClient 1`] = `
Object {
  "devtool": false,
  "mode": "production",
  "module": Object {
    "rules": Array [
      Array [
        Object {
          "exclude": /node_modules\\|bower_components/,
          "test": /public\\\\/\\.\\*\\\\\\.\\(\\?!\\(jpe\\?g\\|png\\|webm\\)\\$\\)\\(\\[\\^\\.\\]\\+\\$\\)\\$/,
          "use": Array [
            Object {
              "loader": "file",
              "options": Object {
                "name": "[1]/[md4:hash:base62:12].[ext]",
                "regExp": /public\\\\/\\(\\.\\*\\)\\\\\\.\\(\\[\\^\\.\\]\\+\\)\\$/,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.\\(jpe\\?g\\|png\\)\\$/i,
          "use": Array [
            "cache",
            Object {
              "loader": "responsive-loader",
              "options": Object {
                "adapter": [Function],
                "name": "[folder]/[name]/[width]x[height]/[md4:hash:12].[ext]",
              },
            },
          ],
        },
        ImageminPlugin {
          "options": Object {
            "bail": false,
            "cache": true,
            "exclude": undefined,
            "filter": [Function],
            "imageminOptions": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
            },
            "include": undefined,
            "loader": false,
            "manifest": undefined,
            "maxConcurrency": 8,
            "name": "[hash].[ext]",
            "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|tif\\|webp\\|svg\\)\\$/i,
          },
        },
      ],
      Object {
        "exclude": /node_modules\\|bower_components/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": true,
            "cacheDirectory": true,
            "compact": true,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "runtime": Object {
                      "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime-corejs3",
                    },
                  },
                },
              ],
            ],
          },
        },
      },
      Object {
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime\\|core-js\\|warning/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": true,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "runtime": Object {
                      "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime-corejs3",
                    },
                  },
                },
              ],
            ],
            "sourceMaps": false,
            "sourceType": "unambiguous",
          },
        },
      },
    ],
  },
  "name": "client",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "path": "empty",
    "process": true,
    "querystring": "empty",
    "tls": "empty",
    "url": "empty",
    "vm": "empty",
  },
  "optimization": Object {
    "chunkIds": "total-size",
    "minimize": true,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "cache": true,
          "cacheKeys": [Function],
          "chunkFilter": [Function],
          "exclude": undefined,
          "extractComments": false,
          "include": undefined,
          "minify": undefined,
          "parallel": 4,
          "sourceMap": false,
          "terserOptions": Object {
            "compress": Object {
              "ecma": 5,
              "keep_infinity": true,
              "passes": 2,
              "toplevel": true,
              "unsafe_Function": true,
            },
            "output": Object {
              "comments": /\\^\\\\\\*\\*!\\|@preserve\\|@license\\|@cc_on/i,
            },
          },
          "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "moduleIds": "total-size",
    "noEmitOnErrors": true,
    "splitChunks": Object {
      "cacheGroups": Object {
        "commons": Object {
          "chunks": "all",
          "minChunks": 2,
          "reuseExistingChunk": true,
        },
        "vendor": Object {
          "chunks": "initial",
          "enforce": true,
          "name": "vendor",
          "priority": 10,
          "reuseExistingChunk": true,
          "test": /node_modules/,
        },
      },
      "chunks": "async",
    },
  },
  "output": Object {
    "chunkFilename": "js/[contenthash].js",
    "filename": "js/[hash].js",
    "pathinfo": true,
    "publicPath": "/public/",
  },
  "performance": Object {
    "hints": false,
  },
  "plugins": Array [
    HashedModuleIdsPlugin {
      "options": Object {
        "context": null,
        "hashDigest": "base64",
        "hashDigestLength": 4,
        "hashFunction": "md4",
      },
    },
    LoaderOptionsPlugin {
      "options": Object {
        "debug": false,
        "minimize": false,
        "test": Object {
          "test": [Function],
        },
      },
    },
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "true",
        "__DEV__": "false",
        "__SERVER__": "false",
        "__STAGE__": undefined,
      },
    },
    CompressionPlugin {
      "options": Object {
        "algorithm": [Function],
        "cache": true,
        "compressionOptions": Object {
          "level": 9,
          "memLevel": 9,
        },
        "deleteOriginalAssets": false,
        "exclude": undefined,
        "filename": "[path]",
        "include": undefined,
        "minRatio": 0.8,
        "test": /\\\\\\.\\(js\\|txt\\|html\\|json\\|md\\|svg\\|xml\\|yml\\)\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        "threshold": 1024,
      },
    },
    StatsWriterPlugin {
      "opts": Object {
        "fields": null,
        "filename": "stats.json",
        "stats": Object {
          "all": false,
          "chunks": true,
          "publicPath": true,
        },
        "transform": [Function],
      },
    },
  ],
  "resolve": Object {
    "descriptionFiles": Array [
      "package.json",
    ],
    "extensions": Array [
      ".mjs",
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
    "mainFields": Array [
      "browser",
      "module",
      "jsnext",
      "esnext",
      "jsnext:main",
      "main",
    ],
    "modules": Array [
      "node_modules",
    ],
    "symlinks": false,
  },
  "resolveLoader": Object {
    "moduleExtensions": Array [
      "-loader",
    ],
    "modules": Array [
      "node_modules",
    ],
  },
  "target": "web",
}
`;

exports[`production configureReactServer 1`] = `
Object {
  "alias": Object {
    "node-fetch$": "node-fetch/lib/index.js",
  },
  "devtool": false,
  "externals": Array [
    "js-beautify",
    "encoding",
  ],
  "mode": "production",
  "module": Object {
    "rules": Array [
      Array [
        Object {
          "exclude": /node_modules\\|bower_components/,
          "test": /public\\\\/\\.\\*\\\\\\.\\(\\?!\\(jpe\\?g\\|png\\|webm\\)\\$\\)\\(\\[\\^\\.\\]\\+\\$\\)\\$/,
          "use": Array [
            Object {
              "loader": "file",
              "options": Object {
                "name": "[1]/[md4:hash:base62:12].[ext]",
                "regExp": /public\\\\/\\(\\.\\*\\)\\\\\\.\\(\\[\\^\\.\\]\\+\\)\\$/,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.\\(jpe\\?g\\|png\\)\\$/i,
          "use": Array [
            "cache",
            Object {
              "loader": "responsive-loader",
              "options": Object {
                "adapter": [Function],
                "name": "[folder]/[name]/[width]x[height]/[md4:hash:12].[ext]",
              },
            },
          ],
        },
        ImageminPlugin {
          "options": Object {
            "bail": false,
            "cache": true,
            "exclude": undefined,
            "filter": [Function],
            "imageminOptions": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
            },
            "include": undefined,
            "loader": false,
            "manifest": undefined,
            "maxConcurrency": 8,
            "name": "[hash].[ext]",
            "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|tif\\|webp\\|svg\\)\\$/i,
          },
        },
      ],
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.mjs\\$/,
        "type": "javascript/auto",
      },
      Object {
        "exclude": /node_modules\\|bower_components/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": true,
            "cacheDirectory": true,
            "compact": true,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": Object {
                      "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime-corejs3",
                    },
                  },
                },
              ],
            ],
          },
        },
      },
      Object {
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime\\|core-js\\|warning/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": true,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": Object {
                      "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime-corejs3",
                    },
                  },
                },
              ],
            ],
            "sourceMaps": false,
            "sourceType": "unambiguous",
          },
        },
      },
      Object {
        "loaders": Array [
          "raw",
        ],
        "test": /\\\\\\.html\\|\\\\\\.txt\\|\\\\\\.tpl/,
      },
    ],
  },
  "name": "server",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "path": "empty",
    "process": true,
    "querystring": "empty",
    "tls": "empty",
    "url": "empty",
    "vm": "empty",
  },
  "optimization": Object {
    "chunkIds": "total-size",
    "moduleIds": "total-size",
    "noEmitOnErrors": true,
  },
  "output": Object {
    "filename": "render.js",
    "libraryTarget": "commonjs2",
    "pathinfo": true,
    "publicPath": "/public/",
  },
  "performance": Object {
    "hints": false,
  },
  "plugins": Array [
    HashedModuleIdsPlugin {
      "options": Object {
        "context": null,
        "hashDigest": "base64",
        "hashDigestLength": 4,
        "hashFunction": "md4",
      },
    },
    IgnoreEmitPlugin {
      "DEBUG": false,
      "ignorePatterns": Array [
        /\\\\\\.\\(\\?!txt\\|\\[tj\\]sx\\?\\|json\\)\\\\w\\+\\$/,
      ],
      "options": Object {},
    },
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "false",
        "__DEV__": "false",
        "__SERVER__": "true",
        "__STAGE__": undefined,
      },
    },
  ],
  "resolve": Object {
    "descriptionFiles": Array [
      "package.json",
    ],
    "extensions": Array [
      ".mjs",
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
    "mainFields": Array [
      "module",
      "jsnext",
      "esnext",
      "jsnext:main",
      "main",
    ],
    "modules": Array [
      "node_modules",
    ],
    "symlinks": false,
  },
  "resolveLoader": Object {
    "moduleExtensions": Array [
      "-loader",
    ],
    "modules": Array [
      "node_modules",
    ],
  },
  "target": "node",
}
`;

exports[`production configureStaticReactServer 1`] = `
Object {
  "alias": Object {
    "node-fetch$": "node-fetch/lib/index.js",
  },
  "devtool": false,
  "externals": Array [
    "js-beautify",
    "encoding",
  ],
  "mode": "production",
  "module": Object {
    "rules": Array [
      Array [
        Object {
          "exclude": /node_modules\\|bower_components/,
          "test": /public\\\\/\\.\\*\\\\\\.\\(\\?!\\(jpe\\?g\\|png\\|webm\\)\\$\\)\\(\\[\\^\\.\\]\\+\\$\\)\\$/,
          "use": Array [
            Object {
              "loader": "file",
              "options": Object {
                "name": "[1]/[md4:hash:base62:12].[ext]",
                "regExp": /public\\\\/\\(\\.\\*\\)\\\\\\.\\(\\[\\^\\.\\]\\+\\)\\$/,
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.\\(jpe\\?g\\|png\\)\\$/i,
          "use": Array [
            "cache",
            Object {
              "loader": "responsive-loader",
              "options": Object {
                "adapter": [Function],
                "name": "[folder]/[name]/[width]x[height]/[md4:hash:12].[ext]",
              },
            },
          ],
        },
        ImageminPlugin {
          "options": Object {
            "bail": false,
            "cache": true,
            "exclude": undefined,
            "filter": [Function],
            "imageminOptions": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
            },
            "include": undefined,
            "loader": false,
            "manifest": undefined,
            "maxConcurrency": 8,
            "name": "[hash].[ext]",
            "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|tif\\|webp\\|svg\\)\\$/i,
          },
        },
      ],
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.mjs\\$/,
        "type": "javascript/auto",
      },
      Object {
        "exclude": /node_modules\\|bower_components/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": true,
            "cacheDirectory": true,
            "compact": true,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": Object {
                      "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime-corejs3",
                    },
                  },
                },
              ],
            ],
          },
        },
      },
      Object {
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime\\|core-js\\|warning/,
        "include": undefined,
        "test": /\\(\\\\\\.\\[mtj\\]sx\\?\\)\\$\\$/,
        "use": Object {
          "loader": "babel",
          "options": Object {
            "babelrc": false,
            "cacheCompression": true,
            "cacheDirectory": true,
            "compact": false,
            "configFile": false,
            "plugins": undefined,
            "presets": Array [
              Array [
                "<PROJECT_ROOT>/node_modules/@lunde/babel-preset-react-app/index.js",
                Object {
                  "es": Object {
                    "env": Object {
                      "targets": Object {
                        "browsers": undefined,
                        "node": "current",
                      },
                    },
                    "runtime": Object {
                      "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime-corejs3",
                    },
                  },
                },
              ],
            ],
            "sourceMaps": false,
            "sourceType": "unambiguous",
          },
        },
      },
      Object {
        "loaders": Array [
          "raw",
        ],
        "test": /\\\\\\.html\\|\\\\\\.txt\\|\\\\\\.tpl/,
      },
      Object {
        "test": /robots\\(\\\\\\.disallow\\)\\?\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "file",
            "options": Object {
              "name": "robots.txt",
            },
          },
        ],
      },
      Object {
        "loaders": Array [
          "raw",
        ],
        "test": /\\\\\\.html/,
      },
    ],
  },
  "name": "server",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "path": "empty",
    "process": true,
    "querystring": "empty",
    "tls": "empty",
    "url": "empty",
    "vm": "empty",
  },
  "optimization": Object {
    "chunkIds": "total-size",
    "moduleIds": "total-size",
    "noEmitOnErrors": true,
  },
  "output": Object {
    "filename": "render.js",
    "libraryTarget": "commonjs2",
    "pathinfo": true,
    "publicPath": "/public/",
  },
  "performance": Object {
    "hints": false,
  },
  "plugins": Array [
    StaticSiteGeneratorPlugin {
      "crawl": true,
      "entry": undefined,
      "globals": undefined,
      "locals": Object {},
      "paths": Array [
        "/",
      ],
    },
    CompressionPlugin {
      "options": Object {
        "algorithm": [Function],
        "cache": true,
        "compressionOptions": Object {
          "level": 9,
          "memLevel": 9,
        },
        "deleteOriginalAssets": false,
        "exclude": undefined,
        "filename": "[path]",
        "include": undefined,
        "minRatio": 0.8,
        "test": /\\\\\\.\\(txt\\|html\\|json\\|md\\|xml\\|yml\\)\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        "threshold": 1024,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "false",
        "__DEV__": "false",
        "__SERVER__": "true",
        "__STAGE__": undefined,
        "process": Object {
          "cwd": [Function],
          "env": Object {
            "NODE_ENV": "\\"production\\"",
            "STAGE": undefined,
          },
        },
      },
    },
    HashedModuleIdsPlugin {
      "options": Object {
        "context": null,
        "hashDigest": "base64",
        "hashDigestLength": 4,
        "hashFunction": "md4",
      },
    },
    IgnoreEmitPlugin {
      "DEBUG": false,
      "ignorePatterns": Array [
        /\\\\\\.\\(\\?!txt\\|\\[tj\\]sx\\?\\|json\\)\\\\w\\+\\$/,
      ],
      "options": Object {},
    },
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "__CLIENT__": "false",
        "__DEV__": "false",
        "__SERVER__": "true",
        "__STAGE__": undefined,
      },
    },
  ],
  "resolve": Object {
    "descriptionFiles": Array [
      "package.json",
    ],
    "extensions": Array [
      ".mjs",
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
    "mainFields": Array [
      "module",
      "jsnext",
      "esnext",
      "jsnext:main",
      "main",
    ],
    "modules": Array [
      "node_modules",
    ],
    "symlinks": false,
  },
  "resolveLoader": Object {
    "moduleExtensions": Array [
      "-loader",
    ],
    "modules": Array [
      "node_modules",
    ],
  },
  "target": "node",
}
`;
